2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* operation/users/user_edit.php: fixed the "home page" for user,
	now it does show ugly 0, show correct the dashboard and
	visualmap and can set other.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* operation/users/user_edit.php: merge the code for made more
	easy the merges from the branch.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/vnc_view.php: added the changes from the branch of
	pandora_4 made for Sancho.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* operation/visual_console/render_view.php: fixed the javascript
	draw lines when there is any error in the map.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php: added more changes for to make
	more easy the merges from the branch.

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php: fixed the links of module
	graphs into public visualmap.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	operation/agentes/status_monitor.php: fixed the links to the items
	that represents modules.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the
	removed the relantionship between items.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the
	moving the lines when the item is a graph.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: fixed the color of
	lines in the editor.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>
