@@ -49,6 +49,7 @@ if (check_acl ($config['id_user'], 0, "AW") || check_acl ($config['id_user'], 0,
 		
 		$menu_godmode["gagente"]["sub"] = $sub;
 	}
+	
 }
 
 if (check_acl ($config['id_user'], 0, "AW")) {
@@ -276,7 +277,7 @@ if (check_acl ($config['id_user'], 0, "PM")) {
 								$menu_godmode[$extmenu['fatherId']]['sub'][$extmenu['sec2']]["refr"] = $config['refr'];
 							}
 							else {
-								$menu_godmode[$extmenu['fatherId']]['sub'][$extmenu['sec2']]["refr"] = 60;
+								$menu_godmode[$extmenu['fatherId']]['sub'][$extmenu['sec2']]["refr"] = 0;
 							}
 						}
 						$menu_godmode[$extmenu['fatherId']]['sub'][$extmenu['sec2']]["icon"] = $extmenu['icon'];
