@@ -336,7 +336,7 @@ function extensions_add_godmode_menu_option ($name, $acl, $fatherId = null, $ico
 	$option_menu['acl'] = $acl;
 	$option_menu['name'] = $name;
 	$extension = &$config['extensions'][$extension_file];
-	$option_menu['sec2'] = $extension['dir'].'/'.mb_substr ($extension_file, 0, -4);
+	$option_menu['sec2'] = $extension['dir'] . '/' . mb_substr ($extension_file, 0, -4);
 	$option_menu['fatherId'] = $fatherId;
 	$option_menu['icon'] = $icon;
 	$option_menu['version'] = $version;
