@@ -1,5 +1,14 @@
 2013-06-25 Miguel de Dios <miguel.dedios@artica.es>
 
+	* godmode/menu.php: fixed the default value for refresh in the
+	extensions.
+	
+	Fixes: #2310
+	
+	* include/functions_extensions.php: cleaned source code style.
+
+2013-06-25 Miguel de Dios <miguel.dedios@artica.es>
+
 	* operation/users/user_edit.php: fixed the "home page" for user,
 	now it does show ugly 0, show correct the dashboard and
 	visualmap and can set other.
